[gd_scene load_steps=7 format=3 uid="uid://bmfdldsyxwnk"]

[ext_resource type="Script" path="res://scenes/scrivener_token.gd" id="1_fve8e"]
[ext_resource type="Texture2D" uid="uid://difxuhmw3l4jm" path="res://icon.svg" id="1_j85cs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf1sb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcrfx"]
bg_color = Color(1, 0.913725, 0.152941, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_a4u75"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyb6f"]
bg_color = Color(1, 0.0431373, 0.152941, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Scrivener Token" type="Control"]
modulate = Color(0.431373, 0.431373, 0.431373, 1)
custom_minimum_size = Vector2(140, 140)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 140.0
script = ExtResource("1_fve8e")

[node name="PanelContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="PanelContainer"]
layout_mode = 2
texture_normal = ExtResource("1_j85cs")
stretch_mode = 0

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xf1sb")

[node name="power" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 31.0
offset_bottom = 30.0

[node name="Panel" type="Panel" parent="power"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dcrfx")

[node name="Label" type="Label" parent="power"]
layout_mode = 2
size_flags_vertical = 1
text = "00"
label_settings = SubResource("LabelSettings_a4u75")
horizontal_alignment = 1
vertical_alignment = 1

[node name="heart" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 0
offset_left = 109.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 30.0

[node name="Panel" type="Panel" parent="heart"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eyb6f")

[node name="Label" type="Label" parent="heart"]
layout_mode = 2
size_flags_vertical = 1
text = "00"
label_settings = SubResource("LabelSettings_a4u75")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/TextureButton" to="." method="_on_texture_button_pressed"]
